Fix text alignment in top box

--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,7 @@ a {
     display: flex;
     flex-wrap: wrap;
     max-width: 80%;
+    text-align: left;
 }
 
 .first-signup {
